--- a/src/Eccube/Resource/template/admin/Setting/Shop/delivery_edit.twig
+++ b/src/Eccube/Resource/template/admin/Setting/Shop/delivery_edit.twig
@@ -37,6 +37,53 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
             });
         });
     </script>
+    <script>
+        // お届け時間設定の新規作成ボタンでお届け時間項目を追加する
+        $('#add_delivery_time_button').on('click', function (event) {
+
+            // 追加するお届け時間名を取得
+            var deliveryTimeName = $('#add_delivery_time_value').val();
+
+            // 追加する項目を雛形からコピー
+            var newWidget = $('#delivery_time_prototype').clone(true);
+
+            // 要素数を取得
+            var counter = newWidget.data('widget-counter');
+
+
+            // 要素数で__name__を置換
+            // newWidget = newWidget.replace(/__name__/g, counter);
+            // alert(newWidget);
+
+            // 雛形のidを初期化
+            newWidget.attr('id', null);
+            // 非表示を解除
+            newWidget.attr('style', null);
+
+            // お届け時間名を入れる
+            newWidget.find('#delivery_time_value').replaceWith(deliveryTimeName);
+
+            // 項目をリストに追加
+            newWidget.appendTo('#delivery_time_group');
+
+
+            // 入力欄を初期化
+            $('#add_delivery_time_value').val('');
+
+            // 要素数をインクリメント
+            counter++;
+            // 要素数を更新
+            $('#delivery_time_prototype').data('widget-counter', counter);
+        });
+
+        // 明細行の削除
+        $('#delivery_time_group').on('click', '.remove-delivery-time-item', function (event) {
+            event.preventDefault();
+
+            // 自身の行を削除.
+            $(event.target).parents('li').remove();
+        });
+    </script>
 {% endblock javascript %}
 
 {% block main %}
@@ -96,14 +143,14 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
                         <div class="card-header"><span>{{ 'admin.setting.shop.delivery_edit.delivery_times'|trans }}</span></div>
                         <div class="card-body p-0">
                             <div class="card rounded border-0 mb-2">
-                                <ul class="list-group list-group-flush">
+                                <ul id="delivery_time_group" class="list-group list-group-flush">
                                     <li class="list-group-item">
                                         <div class="form-row">
                                             <div class="col-auto d-flex align-items-center">
-                                                <input class="form-control" type="text">
+                                                <input id="add_delivery_time_value" class="form-control" type="text">
                                             </div>
                                             <div class="col-auto d-flex align-items-center">
-                                                <button class="btn btn-ec-regular" type="button">{{ 'admin.setting.shop.delivery_edit.delivery_times_register'|trans }}</button>
+                                                <button id="add_delivery_time_button" class="btn btn-ec-regular" type="button">{{ 'admin.setting.shop.delivery_edit.delivery_times_register'|trans }}</button>
                                             </div>
                                         </div>
                                     </li>
@@ -111,28 +158,66 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
                                     {# TODO 上下移動, 編集、削除アクションを実装する. サーバサイドでの処理は不要で、javascriptで画面上の動きだけ制御できればよい #}
                                     {% for child in form.delivery_times %}
                                     <li class="list-group-item">
+                                        {{ form_widget(child) }}
                                         <div class="row justify-content-around">
-                                            <div class="col-auto d-flex align-items-center"><i
-                                                        class="fa fa-bars text-ec-gray"></i></div>
-                                            <div class="col d-flex align-items-center"><a>{{ child.vars.value }}</a></div>
-                                            <div class="col-auto text-right"><a class="btn btn-ec-actionIcon mr-3"
-                                                                                href=""
-                                                                                data-toggle="tooltip"
-                                                                                data-placement="top"
-                                                                                title="上へ移動"><i
-                                                            class="fa fa-arrow-up fa-lg text-secondary"></i></a><a
-                                                        class="btn btn-ec-actionIcon mr-3" href="" data-toggle="tooltip"
-                                                        data-placement="top" title="下へ移動"><i
-                                                            class="fa fa-arrow-down fa-lg text-secondary"></i></a><a
-                                                        class="btn btn-ec-actionIcon mr-3" href="" data-toggle="tooltip"
-                                                        data-placement="top" title="名前を編集"><i
-                                                            class="fa fa-pencil fa-lg text-secondary"></i></a><a
-                                                        class="btn btn-ec-actionIcon mr-3" href="" data-toggle="tooltip"
-                                                        data-placement="top" title="削除"><i
-                                                            class="fa fa-close fa-lg text-secondary"></i></a></div>
+                                            <div class="col-auto d-flex align-items-center">
+                                                <i class="fa fa-bars text-ec-gray"></i>
+                                            </div>
+                                            <div class="col d-flex align-items-center">
+                                                <a>{{ child.vars.value }}</a>
+                                            </div>
+                                            <div class="col-auto text-right">
+                                                <a class="btn btn-ec-actionIcon mr-3" href="" data-toggle="tooltip"
+                                                   data-placement="top" title="上へ移動">
+                                                    <i class="fa fa-arrow-up fa-lg text-secondary"></i>
+                                                </a>
+                                                <a class="btn btn-ec-actionIcon mr-3" href="" data-toggle="tooltip"
+                                                   data-placement="top" title="下へ移動">
+                                                    <i class="fa fa-arrow-down fa-lg text-secondary"></i>
+                                                </a>
+                                                <a class="btn btn-ec-actionIcon mr-3" href="" data-toggle="tooltip"
+                                                   data-placement="top" title="名前を編集">
+                                                    <i class="fa fa-pencil fa-lg text-secondary"></i>
+                                                </a>
+                                                <a class="btn btn-ec-actionIcon mr-3 remove-delivery-time-item" href="" data-toggle="tooltip"
+                                                   data-placement="top" title="削除">
+                                                    <i class="fa fa-close fa-lg text-secondary"></i>
+                                                </a>
+                                            </div>
                                         </div>
                                     </li>
                                     {% endfor %}
+
+                                    <li id="delivery_time_prototype" class="list-group-item" data-widget-counter="{{ form.delivery_times|length }}" style="display: none">
+                                        {{ form_widget(form.delivery_times.vars.prototype) }}
+                                        <div class="row justify-content-around">
+                                            <div class="col-auto d-flex align-items-center">
+                                                <i class="fa fa-bars text-ec-gray"></i>
+                                            </div>
+                                            <div class="col d-flex align-items-center">
+                                                <a><div id="delivery_time_value"></div></a>
+                                            </div>
+                                            <div class="col-auto text-right">
+                                                <a class="btn btn-ec-actionIcon mr-3" href="" data-toggle="tooltip"
+                                                   data-placement="top" title="上へ移動">
+                                                    <i class="fa fa-arrow-up fa-lg text-secondary"></i>
+                                                </a>
+                                                <a class="btn btn-ec-actionIcon mr-3" href="" data-toggle="tooltip"
+                                                   data-placement="top" title="下へ移動">
+                                                    <i class="fa fa-arrow-down fa-lg text-secondary"></i>
+                                                </a>
+                                                <a class="btn btn-ec-actionIcon mr-3" href="" data-toggle="tooltip"
+                                                   data-placement="top" title="名前を編集">
+                                                    <i class="fa fa-pencil fa-lg text-secondary"></i>
+                                                </a>
+                                                <a class="btn btn-ec-actionIcon mr-3 remove-delivery-time-item" href="" data-toggle="tooltip"
+                                                   data-placement="top" title="削除">
+                                                    <i class="fa fa-close fa-lg text-secondary"></i>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </li>
+
                                     {# TODO お届け時間の編集を実装する #}
                                     <li class="list-group-item" style="display: none">
                                         <div class="row justify-content-around">
