--- a/src/Eccube/Resource/template/admin/Setting/Shop/delivery_edit.twig
+++ b/src/Eccube/Resource/template/admin/Setting/Shop/delivery_edit.twig
@@ -38,50 +38,140 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
         });
     </script>
     <script>
-        // お届け時間設定の新規作成ボタンでお届け時間項目を追加する
-        $('#add_delivery_time_button').on('click', function (event) {
+        $(function() {
 
-            // 追加するお届け時間名を取得
-            var deliveryTimeName = $('#add_delivery_time_value').val();
+            var $collectionHolder = $('#delivery-time-group');
+            var index = $collectionHolder.find('.delivery-time-item').length;
 
-            // 追加する項目を雛形からコピー
-            var newWidget = $('#delivery_time_prototype').clone(true);
+            // お届け時間設定の新規作成ボタンでお届け時間項目を追加する
+            $('#add-delivery-time-button').on('click', function (event) {
 
-            // 要素数を取得
-            var counter = newWidget.data('widget-counter');
+                // 追加するお届け時間名を取得
+                var deliveryTimeName = $('#add-delivery-time-value').val();
+
+                var prototype = $collectionHolder.data('prototype');
+
+                var newForm = prototype.replace(/__name__/g, index);
+                var newForm = newForm.replace(/__value__/g, deliveryTimeName);
+
+                // 要素を追加
+                var $lastRow = $('#delivery-time-group > li:last');
+                $lastRow.after(newForm);
+
+                // お届け時間名を入れる
+                var inputId = '#delivery_delivery_times_' + index + '_delivery_time';
+                $(inputId).val(deliveryTimeName);
+
+                // 入力欄を初期化
+                $('#add-delivery-time-value').val('');
+
+                // 要素数をインクリメント
+                index++;
+            });
 
 
-            // 要素数で__name__を置換
-            // newWidget = newWidget.replace(/__name__/g, counter);
-            // alert(newWidget);
+            // 明細行の削除
+            $('#delivery-time-group').on('click', '.remove-delivery-time-item', function (event) {
+                event.preventDefault();
 
-            // 雛形のidを初期化
-            newWidget.attr('id', null);
-            // 非表示を解除
-            newWidget.attr('style', null);
-
-            // お届け時間名を入れる
-            newWidget.find('#delivery_time_value').replaceWith(deliveryTimeName);
-
-            // 項目をリストに追加
-            newWidget.appendTo('#delivery_time_group');
-
-
-            // 入力欄を初期化
-            $('#add_delivery_time_value').val('');
-
-            // 要素数をインクリメント
-            counter++;
-            // 要素数を更新
-            $('#delivery_time_prototype').data('widget-counter', counter);
+                // 自身の行を削除.
+                $(event.target).parents('li').remove();
+            });
         });
+    </script>
+    <script>
+        $(function () {
+            // 初期表示時のsort noを保持.
+            var oldSortNos = [];
+            $('.sortable-item').each(function () {
+                oldSortNos.push(this.dataset.sortNo);
+            });
+            oldSortNos.sort(function (a, b) {
+                return a - b;
+            }).reverse();
+            // 並び替え後にsort noを更新
+            var updateSortNo = function () {
+                var newSortNos = {};
+                var i = 0;
+                $('.sortable-item').each(function () {
+                    newSortNos[this.dataset.id] = oldSortNos[i];
+                    i++;
+                });
+                $.ajax({
+                    url: '{{ url('admin_product_tag_sort_no_move') }}',
+                    type: 'POST',
+                    headers: {
+                        'x-csrf-token': $('meta[name="x-csrf-token"]').attr('content')
+                    },
+                    data: newSortNos
+                }).always(function () {
+                    $(".modal-backdrop").remove();
+                });
+            };
+            // 最初と最後の↑↓を再描画
+            var redrawDisableAllows = function () {
+                var items = $('.sortable-item');
+                items.find('a').removeClass('disabled');
+                items.first().find('a.action-up').addClass('disabled');
+                items.last().find('a.action-down').addClass('disabled');
+            };
+            // オーバレイ後, 表示順の更新を行う
+            var moveSortNo = function () {
+                $('body').append($('<div class="modal-backdrop show"></div>'));
+                updateSortNo();
+                redrawDisableAllows();
+            }
+            // Drag and Drop
+            $(".sortable-container").sortable({
+                items: '> .sortable-item',
+                cursor: 'move',
+                update: function (e, ui) {
+                    moveSortNo();
+                }
+            });
+            // Up
+            $(".sortable-item").on('click', 'a.action-up', function (e) {
+                e.preventDefault();
+                var current = $(this).parents("li");
+                if (current.prev().hasClass('sortable-item')) {
+                    current.prev().before(current);
+                    moveSortNo();
+                }
+            });
+            // Down
+            $(".sortable-item").on('click', 'a.action-down', function (e) {
+                e.preventDefault();
+                var current = $(this).parents("li");
+                if (current.next().hasClass('sortable-item')) {
+                    current.next().after(current);
+                    moveSortNo();
+                }
+            });
 
-        // 明細行の削除
-        $('#delivery_time_group').on('click', '.remove-delivery-time-item', function (event) {
-            event.preventDefault();
+            // 編集
+            $(".sortable-item").on('click', 'a.action-edit', function (e) {
+                e.preventDefault();
+                var current = $(this).parents("li");
+                current.find('.mode-view').addClass('d-none');
+                current.find('.mode-edit').removeClass('d-none');
+            });
 
-            // 自身の行を削除.
-            $(event.target).parents('li').remove();
+            // 編集キャンセル
+            $('.sortable-item').on('click', 'button.action-edit-cancel', function (e) {
+                e.preventDefault();
+                var current = $(this).parents("li");
+                current.find('[data-origin-value]').each(function(e) {
+                    $(this).val($(this).attr('data-origin-value'));
+                });
+                current.find('.mode-view').removeClass('d-none');
+                current.find('.mode-edit').addClass('d-none');
+            });
+            // 編集時, エラーがあれば入力欄を表示.
+            $('.sortable-item').find('.is-invalid').each(function (e) {
+                var current = $(this).parents("li");
+                current.find('.mode-view').addClass('d-none');
+                current.find('.mode-edit').removeClass('d-none');
+            });
         });
     </script>
 {% endblock javascript %}
@@ -143,112 +233,23 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
                         <div class="card-header"><span>{{ 'admin.setting.shop.delivery_edit.delivery_times'|trans }}</span></div>
                         <div class="card-body p-0">
                             <div class="card rounded border-0 mb-2">
-                                <ul id="delivery_time_group" class="list-group list-group-flush">
+                                <ul id="delivery-time-group" class="list-group list-group-flush"
+                                    data-prototype="{% filter escape %}{{ include('@admin/Setting/Shop/delivery_time_prototype.twig', {'form': form.delivery_times.vars.prototype}) }}{% endfilter %}">
                                     <li class="list-group-item">
                                         <div class="form-row">
                                             <div class="col-auto d-flex align-items-center">
-                                                <input id="add_delivery_time_value" class="form-control" type="text">
+                                                <input id="add-delivery-time-value" class="form-control" type="text">
                                             </div>
                                             <div class="col-auto d-flex align-items-center">
-                                                <button id="add_delivery_time_button" class="btn btn-ec-regular" type="button">{{ 'admin.setting.shop.delivery_edit.delivery_times_register'|trans }}</button>
+                                                <button id="add-delivery-time-button" class="btn btn-ec-regular" type="button">{{ 'admin.setting.shop.delivery_edit.delivery_times_register'|trans }}</button>
                                             </div>
                                         </div>
                                     </li>
                                     {# TODO お届け時間16行の固定入力になっているため, 動的に増やせるように実装を変更する #}
                                     {# TODO 上下移動, 編集、削除アクションを実装する. サーバサイドでの処理は不要で、javascriptで画面上の動きだけ制御できればよい #}
                                     {% for child in form.delivery_times %}
-                                    <li class="list-group-item">
-                                        {{ form_widget(child) }}
-                                        <div class="row justify-content-around">
-                                            <div class="col-auto d-flex align-items-center">
-                                                <i class="fa fa-bars text-ec-gray"></i>
-                                            </div>
-                                            <div class="col d-flex align-items-center">
-                                                <a>{{ child.vars.value }}</a>
-                                            </div>
-                                            <div class="col-auto text-right">
-                                                <a class="btn btn-ec-actionIcon mr-3" href="" data-toggle="tooltip"
-                                                   data-placement="top" title="上へ移動">
-                                                    <i class="fa fa-arrow-up fa-lg text-secondary"></i>
-                                                </a>
-                                                <a class="btn btn-ec-actionIcon mr-3" href="" data-toggle="tooltip"
-                                                   data-placement="top" title="下へ移動">
-                                                    <i class="fa fa-arrow-down fa-lg text-secondary"></i>
-                                                </a>
-                                                <a class="btn btn-ec-actionIcon mr-3" href="" data-toggle="tooltip"
-                                                   data-placement="top" title="名前を編集">
-                                                    <i class="fa fa-pencil fa-lg text-secondary"></i>
-                                                </a>
-                                                <a class="btn btn-ec-actionIcon mr-3 remove-delivery-time-item" href="" data-toggle="tooltip"
-                                                   data-placement="top" title="削除">
-                                                    <i class="fa fa-close fa-lg text-secondary"></i>
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </li>
+                                        {{ include('@admin/Setting/Shop/delivery_time_prototype.twig', {'form': child}) }}
                                     {% endfor %}
-
-                                    <li id="delivery_time_prototype" class="list-group-item" data-widget-counter="{{ form.delivery_times|length }}" style="display: none">
-                                        {{ form_widget(form.delivery_times.vars.prototype) }}
-                                        <div class="row justify-content-around">
-                                            <div class="col-auto d-flex align-items-center">
-                                                <i class="fa fa-bars text-ec-gray"></i>
-                                            </div>
-                                            <div class="col d-flex align-items-center">
-                                                <a><div id="delivery_time_value"></div></a>
-                                            </div>
-                                            <div class="col-auto text-right">
-                                                <a class="btn btn-ec-actionIcon mr-3" href="" data-toggle="tooltip"
-                                                   data-placement="top" title="上へ移動">
-                                                    <i class="fa fa-arrow-up fa-lg text-secondary"></i>
-                                                </a>
-                                                <a class="btn btn-ec-actionIcon mr-3" href="" data-toggle="tooltip"
-                                                   data-placement="top" title="下へ移動">
-                                                    <i class="fa fa-arrow-down fa-lg text-secondary"></i>
-                                                </a>
-                                                <a class="btn btn-ec-actionIcon mr-3" href="" data-toggle="tooltip"
-                                                   data-placement="top" title="名前を編集">
-                                                    <i class="fa fa-pencil fa-lg text-secondary"></i>
-                                                </a>
-                                                <a class="btn btn-ec-actionIcon mr-3 remove-delivery-time-item" href="" data-toggle="tooltip"
-                                                   data-placement="top" title="削除">
-                                                    <i class="fa fa-close fa-lg text-secondary"></i>
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </li>
-
-                                    {# TODO お届け時間の編集を実装する #}
-                                    <li class="list-group-item" style="display: none">
-                                        <div class="row justify-content-around">
-                                            <div class="col-7 d-flex align-items-center">
-                                                <div class="form-row">
-                                                    <div class="col-auto d-flex align-items-center">
-                                                        <input class="form-control" type="text" placeholder="配送方法名を入力">
-                                                    </div>
-                                                    <div class="col-auto d-flex align-items-center">
-                                                        <button class="btn btn-ec-conversion" type="submit">決定</button>
-                                                    </div>
-                                                    <div class="col-auto d-flex align-items-center">
-                                                        <button class="btn btn-ec-sub" type="submit">キャンセル</button>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="col-5 text-right"><a class="btn btn-ec-actionIcon mr-3" href=""
-                                                                             data-toggle="tooltip" data-placement="top"
-                                                                             title="上へ移動"><i
-                                                            class="fa fa-arrow-up fa-lg text-secondary"></i></a><a
-                                                        class="btn btn-ec-actionIcon mr-3" href="" data-toggle="tooltip"
-                                                        data-placement="top" title="下へ移動"><i
-                                                            class="fa fa-arrow-down fa-lg text-secondary"></i></a><a
-                                                        class="btn btn-ec-actionIcon mr-3" href="" data-toggle="tooltip"
-                                                        data-placement="top" title="名前を編集"><i
-                                                            class="fa fa-pencil fa-lg text-secondary"></i></a><a
-                                                        class="btn btn-ec-actionIcon mr-3" href="" data-toggle="tooltip"
-                                                        data-placement="top" title="削除"><i
-                                                            class="fa fa-close fa-lg text-secondary"></i></a></div>
-                                        </div>
-                                    </li>
                                 </ul>
                             </div>
                         </div>
