--- a/src/Eccube/Resource/template/admin/Setting/Shop/delivery_time_prototype.twig
+++ b/src/Eccube/Resource/template/admin/Setting/Shop/delivery_time_prototype.twig
@@ -1,11 +1,26 @@
-<li id="delivery_time_prototype" class="list-group-item" data-widget-counter="{{ form.delivery_times|length }}" style="display: none">
-    {{ form_widget(form.delivery_times.vars.prototype) }}
+<li id="delivery-time-prototype" class="list-group-item delivery-time-item sortable-item">
     <div class="row justify-content-around">
         <div class="col-auto d-flex align-items-center">
             <i class="fa fa-bars text-ec-gray"></i>
         </div>
         <div class="col d-flex align-items-center">
-            <a><div id="delivery_time_value"></div></a>
+            <a>{% if form.vars.value == '' %}__value__{% else %}{{ form.vars.value }}{% endif %}</a>
+        </div>
+        {# TODO: 非表示の切り替え #}
+        <div class="col-7 d-flex align-items-center">
+            <div class="form-row">
+                {# TODO: フォームの調整 #}
+                {{ form_widget(form) }}
+                {#<div class="col-auto d-flex align-items-center">#}
+                    {#<input class="form-control" type="text" placeholder="配送方法名を入力">#}
+                {#</div>#}
+                <div class="col-auto d-flex align-items-center">
+                    <button class="btn btn-ec-conversion" type="submit">決定</button>
+                </div>
+                <div class="col-auto d-flex align-items-center">
+                    <button class="btn btn-ec-sub action-edit-cancel" type="submit">キャンセル</button>
+                </div>
+            </div>
         </div>
         <div class="col-auto text-right">
             <a class="btn btn-ec-actionIcon mr-3" href="" data-toggle="tooltip"
@@ -16,7 +31,7 @@
                data-placement="top" title="下へ移動">
                 <i class="fa fa-arrow-down fa-lg text-secondary"></i>
             </a>
-            <a class="btn btn-ec-actionIcon mr-3" href="" data-toggle="tooltip"
+            <a class="btn btn-ec-actionIcon mr-3 action-edit" href="" data-toggle="tooltip"
                data-placement="top" title="名前を編集">
                 <i class="fa fa-pencil fa-lg text-secondary"></i>
             </a>
