完了通知のRouting追加、必要な処理のコメントを追加

--- a/app/Plugin/LinkPayment/Resource/index.twig
+++ b/app/Plugin/LinkPayment/Resource/index.twig
@@ -1,1 +1,4 @@
-Hello!!
+<form method="post" action="{{ url('sample_payment_complete') }}">
+    {# TODO それらしいフォームを追加 #}
+    <button type="submit">購入完了</button>
+</form>
