--- a/app/Plugin/LinkPayment/Resource/dummy.twig
+++ b/app/Plugin/LinkPayment/Resource/dummy.twig
@@ -54,5 +54,6 @@
     <button type="submit">購入完了</button>
 </form>
 
+<a href="{{ url('sample_payment_back') }}?code={{ order_code }}">注文手続き画面に戻る</a>
 </body>
 </html>
