決済画面に遷移するときのステータス更新処理を追加（更新できない）

--- a/app/Plugin/LinkPayment/Resource/dummy.twig
+++ b/app/Plugin/LinkPayment/Resource/dummy.twig
@@ -54,6 +54,7 @@
     <button type="submit">購入完了</button>
 </form>
 
+{# 直リンクではなくいったん決済サーバを挟んでリダイレクトの方が良いか #}
 <a href="{{ url('sample_payment_back') }}?code={{ order_code }}">注文手続き画面に戻る</a>
 </body>
 </html>
